<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    tools:context=".ListOfGamesActivity">

    <ListView
        android:id="@+id/gamesList"
        android:layout_width="342dp"
        android:layout_height="422dp"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.431" />

    <LinearLayout
        android:layout_width="333dp"
        android:layout_height="47dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gamesList">

        <Button
            android:id="@+id/playGame"
            style="@style/AppTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:drawable/btn_default"
            android:gravity="center"
            android:text="@string/playGame"
            android:textColor="@color/button2"
            android:textSize="15sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/DateSort"
            style="@style/AppTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:drawable/btn_default"
            android:gravity="center"
            android:text="@string/datesort"
            android:textColor="@color/button1"
            android:textSize="15sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/sortBy"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:drawable/btn_default"
            android:text="@string/namesort"
            android:textColor="@color/button3"
            android:textSize="15sp"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/recordGamesDisp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recordedGames"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/button2"
        android:textStyle="bold"
        app:fontFamily="sans-serif-smallcaps"
        app:layout_constraintBottom_toTopOf="@+id/gamesList"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>